--- a/src/Login.module.css
+++ b/src/Login.module.css
@@ -1,14 +1,15 @@
 .form-container {
-    /* padding: 20px; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     min-height: 90vh;
-    background-image: linear-gradient(79deg, #7439db, #c66fbc, #f7944d);
-    /* border-radius: 8px; */
-    /* justify-content: center; */
-    /* border: 2px solid #fff; */
-    /* color: #fff; */
+    margin: 10px;
+    padding: 20px;
+    background: linear-gradient(315deg, #4dc5f7, #fff);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .login-container {
@@ -17,7 +18,7 @@
 }
 
 .form-container h2 {
-  margin-bottom: 2rem;
+  margin-bottom: 20px;
   color: black !important;
 }
 
@@ -45,7 +46,6 @@
 
 .login-container button {
   padding: 0.5rem 2rem;
-  /* background-color: #fff; */
   color: #7439db;
   border: none;
   border-radius: 8px;
@@ -59,14 +59,14 @@
 }
 
 .error {
-  color: #000;
+  color: #ff4f4f;
   font-size: 0.8rem;
   margin-top: 0.5rem;
+  text-align: left;
 }
 
 .btn-link {
     background: none;
-    /* color: #fff; */
     text-decoration: underline;
     border: none;
     margin-top: 20px;
